# bajiru-speaker-recognition

./: .gitignore  README.md  prek.toml  pyproject.toml
.github/workflows/: cpp-tests.yml
cpp_impl/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp_impl/sanity/: run_lint.ps1
cpp_impl/src/linkjiru/: AnalysisThread.h  Analyzer.h  Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RmsAnalyzer.h  SharedRingBuffer.h  VTubeStudioClient.cpp  VTubeStudioClient.h
cpp_impl/tests/: CMakeLists.txt  bench_chain_latency.cpp  bench_csv.h  bench_results.csv  bench_ring_buffer.cpp  gtest_main.cpp  mock_vts_server.h  test_shared_ring_buffer.cpp
python/: README.md
python/baji_recognition/: pyproject.toml
python/baji_recognition/src/baji_recognition/: __init__.py  identifier.py  logging.py  process.py  scripts.py
python/baji_recognition/tests/: test_recognition.py  test_version.py
python/data_augment/: README.md  pyproject.toml
python/data_augment/scripts/: example.py
python/data_augment/src/data_augment/: __init__.py  core.py  defaults.py  pitch_detect.py  psola.py  resample.py
python/data_augment/src/data_augment/_native_pyin/: __init__.py  _frame.py  _viterbi.py  _yin.py
python/data_augment/src/data_augment/augmentations/: __init__.py  _common.py  apf.py  gain.py  noise.py  phase_flip.py  pitch.py  speed.py  stretch.py
python/data_augment/tests/: test_augmenter.py  test_batch.py  test_complex_signals.py  test_effects.py  test_native_pyin.py  test_noise.py  test_resample.py  test_review_gaps.py  test_time_scale.py
python/nn_model/: README.md  pyproject.toml
python/nn_model/scripts/: eval.py  export_onnx.py  makedata.py  model_preset.py  train.py
python/nn_model/src/nn_model/: __init__.py  dataset.py  model.py  trainer.py
python/pitch_math/: pyproject.toml
python/pitch_math/src/pitch_math/: __init__.py  audio.py  classifier.py  config.py  features.py  listener.py
python/pitch_math/src/pitch_math/scripts/: __init__.py  debug.py  live.py  test_audio.py  train.py
