[project]
name = "nn-model"
version = "0.1.0"
description = "NN modules"
license = "MIT"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = ["numpy>=2.0", "torch>=2.10", "librosa>=0.11"]

[project.optional-dependencies]
scipy = ["scipy>=1.14"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "COM812",
    "ISC001",
    "E501",
    "D100",
    "D102",
    "D103",
    "D203",
    "D213",
    "D400",
    "D415",
    "FBT002",
    "T201",
    "PTH",     # fs stuff
    "S311",    # no need for crypto rng
    "PLR0913", # "too many arguments"
]
